--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "applet-mwc": "^0.2.4",
+    "applet-vm": "^0.2.12",
     "autoprefixer": "10.4.16",
     "axios": "^1.6.7",
     "clsx": "^2.0.0",
